--- a/doc/trunk/design/syn/S11.pod
+++ b/doc/trunk/design/syn/S11.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 19 Nov 2005
+  Last Modified: 16 Nov 2005
   Number: 11
-  Version: 5
+  Version: 6
 
 =head1 Overview
 
@@ -98,6 +98,11 @@ That's pretty much equivalent to:
     my &common ::= &Sense::common;
     our @horse ::= @Sense::horse;
     state $haslearnedsome ::= $Sense::haslearnedsome;
+
+In the absence of a specific scoping specified by the caller, the module
+may also specify a different scoping default by use of C<:our> or C<:state>
+tags as arguments to C<is export>.  (Of course, mixing incompatible scoping
+in different scopes is likely to lead to confusion.)
 
 =head1 Versioning
 
