Added special case about {}.
git-svn-id: http://svn.pugscode.org/pugs@23231 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -1810,9 +1810,9 @@ of one or more of its invocants:
 
 =head2 Anonymous hashes vs blocks
 
-C<{...}> is always a block.  However, if it consists of a single list, the
-first element of which is either a hash or a pair, it is executed immediately
-to compose a hash reference.
+C<{...}> is always a block.  However, if it is completely empty or
+consists of a single list, the first element of which is either a hash
+or a pair, it is executed immediately to compose a hash reference.  
 
 The standard C<pair> list operator is equivalent to:
 
