--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -13,9 +13,9 @@ Allison Randal <al@shadowed.net>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 21 Mar 2003
-  Last Modified: 21 Nov 2005
+  Last Modified: 20 Jan 2006
   Number: 6
-  Version: 12
+  Version: 13
 
 
 This document summarizes Apocalypse 6, which covers subroutines and the
@@ -512,6 +512,10 @@ an undefined value if they have no default.  (A supplied argument that is
 undefined is not considered to be missing, and hence does not trigger
 the default.  Use C<//=> within the body for that.)
 
+(Conjectural: Within the body you may also use C<exists> on the
+parameter name to determine whether it was passed.  Maybe this will have to
+be restricted to the C<?> form, unless we're willing to admit that a parameter
+could be simultaneously defined and non-existant.)
 
 =head2 Named parameters
 
