More cleanup, typos, clarifications, and s/code/CODE/ to emphasize weird-block-ness.
git-svn-id: http://svn.pugscode.org/pugs@23245 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -15,7 +15,7 @@ Allison Randal <al@shadowed.net>
   Date: 21 Mar 2003
   Last Modified: 2 Feb 2006
   Number: 6
-  Version: 15
+  Version: 16
 
 
 This document summarizes Apocalypse 6, which covers subroutines and the
@@ -1540,7 +1540,7 @@ exception when you try to modify them.
 
 =item C<is copy>
 
-Specifies that the parameter receives a distinct, read-writeable copy of the
+Specifies that the parameter receives a distinct, read-writable copy of the
 original argument. This is commonly known as "pass-by-value".
 
     sub reprint ($text, $count is copy) {
@@ -1815,17 +1815,22 @@ of one or more of its invocants:
 
 Macros are functions or operators that are called by the compiler as
 soon as their arguments are parsed (if not sooner).  The syntactic
-effect of a macro declaration or importation is always lexically scoped,
-even if the name of the macro is visible elsewhere.  As with ordinary operators,
-macros may be classified by their grammatical category.  For a given grammatical
-category, a default parsing rule or set of rules is used, but those rules
-that have not yet been "used" by the time the macro keyword or token is seen
-can be replaced by use of "is parsed" trait.  (This means, for instance, that
-an infix operator can change the parse rules for its right operand but not its
-left operand.)
+effect of a macro declaration or importation is always lexically
+scoped, even if the name of the macro is visible elsewhere.  As with
+ordinary operators, macros may be classified by their grammatical
+category.  For a given grammatical category, a default parsing rule or
+set of rules is used, but those rules that have not yet been "used"
+by the time the macro keyword or token is seen can be replaced by
+use of "is parsed" trait.  (This means, for instance, that an infix
+operator can change the parse rules for its right operand but not
+its left operand.)
 
-A macro is called as if it were a method on the current match object returned
-from the grammar rule being reduced.
+In the absence of a signature to the contrary, a macro is called as
+if it were a method on the current match object returned from the
+grammar rule being reduced; that is, all the current parse information
+is available by treating C<self> as if it were a C<$/> object.
+[Conjecture: alternate representations may be available if arguments
+are declared with particular AST types.]
 
 Macros may return either a string to be reparsed, or a syntax tree
 that needs no further parsing.  The textual form is handy, but the
@@ -1837,27 +1842,30 @@ reversible, so things like syntax highlighters can get back to the
 original language and know which parts of the derived program come
 from which parts of the user's view of the program.
 
-In aid of returning syntax tree, Perl provides a "quasiquoting" mechanism
-using the keyword "code", followed by a block intended to represent an AST:
+In aid of returning syntax tree, Perl provides a "quasiquoting"
+mechanism using the keyword "CODE", followed by a block intended to
+represent an AST:
 
-    return code { say $a };
+    return CODE { say $a };
 
-[Conjecture: Other keywords are possible if we have more than one AST type.]
+[Conjecture: Other keywords are possible if we have more than one
+AST type.]
 
-Within a quasiquote, variable and function names resolve first of all
-according to the lexical scope of the macro definition, and if unrecognized in
-that scope, are assumed to be bound from the scope of the macro call
-each time it is called.  If they cannot be bound from the scope of
-the macro call, a compile-time exception is thrown.
+Within a quasiquote, variable and function names resolve first of
+all according to the lexical scope of the macro definition, and if
+unrecognized in that scope, are assumed to be bound from the scope
+of the macro call each time it is called.  If they cannot be bound
+from the scope of the macro call, a compile-time exception is thrown.
 
 Variables that resolve from the lexical scope of the macro definition
 will be inserted appropriately depending on the type of the variable,
 which may be either a syntax tree or a string.  (Again, syntax tree
 is preferred.)  The case is similar to that of a macro called from
 within the quasiquote, insofar as reparsing only happens with the
-string version of interpolation, except that such a reparse happens at
-macro call time rather than macro definition time, so its result cannot
-change the parsers expections about what follows the interpolated variable.
+string version of interpolation, except that such a reparse happens
+at macro call time rather than macro definition time, so its result
+cannot change the parser's expectations about what follows the
+interpolated variable.
 
 Hence, while the quasiquote itself is being parsed, the syntactic
 interpolation of a variable into the quasiquote always results in
@@ -1868,9 +1876,19 @@ likes afterwards, according to its syntactic category.  (Generally,
 a term expects a following postfix or infix operator, and an operator
 expects a following term or prefix operator.)
 
-In case of name ambiguity, prefix with C<COMPILING::> to indicate a name in
-the compiling scope, and C<OUTER::> to indicate a name in the macro definition's
-scope.
+In case of name ambiguity, prefix with C<COMPILING::> to indicate a
+name in the compiling scope, and anything else (such as C<OUTER::>)
+to indicate a name in the macro definition's scope, since that's the
+default.  In particular, any variable declared within the quasiquote
+block is assumed to scope to the quasiquote; to scope the declaration
+to the macro call's scope, you must say
+
+    my COMPILING::<$foo> = 123;
+    env COMPILING::<@bar> = ();
+    our COMPILING::<%baz>;
+
+or some such if you wish to force the compiler to install the variable
+into the symbol table being constructed by the macro call.
 
 [Conjecture: Due to these dwimmy scoping rules, there is no need of
 a special "unquote" construct as in Scheme et al.]
